--- a/etc/install
+++ b/etc/install
@@ -457,7 +457,7 @@ if [ -z "${DOTPATH:-}" ]; then
     DOTPATH=~/.dotfiles; export DOTPATH
 fi
 
-DOTFILES_GITHUB="https://github.com/b4b4r07/dotfiles.git"; export DOTFILES_GITHUB
+DOTFILES_GITHUB="https://github.com/yni17196791/dotfiles.git"; export DOTFILES_GITHUB
 
 # shellcheck disable=SC1078,SC1079,SC2016
 dotfiles_logo='
@@ -499,7 +499,7 @@ dotfiles_download() {
 
         elif is_exists "curl" || is_exists "wget"; then
             # curl or wget
-            local tarball="https://github.com/b4b4r07/dotfiles/archive/master.tar.gz"
+            local tarball="https://github.com/yni17196791/dotfiles/archive/master.tar.gz"
             if is_exists "curl"; then
                 curl -L "$tarball"
 
